fix: tweet alignment in articles (#38)

--- a/src/components/templates/article/style.scss
+++ b/src/components/templates/article/style.scss
@@ -34,7 +34,7 @@
     margin-bottom: inherit;
     margin-top: inherit;
   }
-  twitterwidget.twitter-tweet {
+  .twitter-tweet {
     margin: 0 auto;
   }
 }
